syntax = "proto3";

package product;

option go_package = "github.com/herman-xphp/go-microservices-ecommerce/proto/product";

// ProductService provides product operations for other services
service ProductService {
  // GetProduct returns product info by ID
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  
  // CheckStock returns the current stock for a product
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
  
  // DecreaseStock reduces the stock for a product (called by Order service)
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse);
}

message GetProductRequest {
  uint64 product_id = 1;
}

message GetProductResponse {
  bool found = 1;
  uint64 id = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  int32 stock = 6;
  uint64 category_id = 7;
  string category_name = 8;
  bool is_active = 9;
}

message CheckStockRequest {
  uint64 product_id = 1;
}

message CheckStockResponse {
  bool found = 1;
  int32 stock = 2;
  string error_message = 3;
}

message DecreaseStockRequest {
  uint64 product_id = 1;
  int32 quantity = 2;
}

message DecreaseStockResponse {
  bool success = 1;
  int32 remaining_stock = 2;
  string error_message = 3;
}
